Stop hyperlinks in main from wrapping on to new line and update comments in mystle.css

--- a/styles/css/mystyle.css
+++ b/styles/css/mystyle.css
@@ -4,6 +4,8 @@
 
     */
 
+    /* Generic styles */
+
     .bg-warning
     {background:#f0ad4e;}
 
@@ -29,7 +31,7 @@
         margin-bottom:0;
         border-radius: 0;
     }
-    /* z - wrapper for Site logo, login & sign up */
+    /* logologinwrapper - wrapper for Site logo, login & sign up */
     .logologinwrapper
     {
         height:50px;
@@ -365,6 +367,10 @@
 
     }
 
+    main a
+    {
+        white-space: nowrap;/* stop hyperlinks in main wrapping onto a new line */
+    }
     main p a
     {
         border-bottom: 1px dotted #f00;
